(fix): group and channel names overflow issue (fix): clicking on the join group button also opens up the group (fix): add more contrast to buttons

--- a/src/app/modules/onboarding-v2/page/onboarding.component.scss
+++ b/src/app/modules/onboarding-v2/page/onboarding.component.scss
@@ -198,7 +198,7 @@ m-onboarding {
                 justify-content: center;
 
                 & > i {
-                  color: #ececec;
+                  color: #a3a3a3;
                 }
 
                 &.m-groupsJoin__subscribed {
