--- a/src/app/modules/onboarding-v2/steps/channels/list/list.component.scss
+++ b/src/app/modules/onboarding-v2/steps/channels/list/list.component.scss
@@ -59,7 +59,7 @@ m-onboarding__channelList {
 
       h4 {
         height: 21px;
-        width: 141px;
+        width: 100%;
         color: #636363;
         font-family: Roboto;
         font-size: 16px;
@@ -108,10 +108,6 @@ m-onboarding__channelList {
         span {
           display: none;
         }
-      }
-
-      m-join {
-        margin-right: 10px;
       }
     }
   }
