--- a/src/app/modules/onboarding-v2/steps/groups/list/list.component.scss
+++ b/src/app/modules/onboarding-v2/steps/groups/list/list.component.scss
@@ -30,12 +30,14 @@ m-onboarding__groupList {
   }
 
   .m-groupList__item {
+    display: flex;
     &:last-of-type {
       border-bottom: 0;
     }
 
     a {
       display: flex;
+      flex-grow: 1;
       text-decoration: none;
       padding: 8px 8px;
     }
@@ -59,19 +61,13 @@ m-onboarding__groupList {
 
       h4 {
         height: 21px;
-        width: 141px;
+        width: 100%;
         color: #636363;
         font-family: Roboto;
         font-size: 16px;
         font-weight: 500;
         line-height: 21px;
         margin: 0;
-        //font-size: 13px;
-        //line-height: 18px;
-        //font-weight: 600;
-        //@include m-theme() {
-        //  color: themed($m-grey-800);
-        //}
       }
 
       > div {
@@ -83,15 +79,6 @@ m-onboarding__groupList {
         overflow: hidden;
         position: relative;
         display: block;
-        //text-overflow: ellipsis;
-        //font-size: 11px;
-        //line-height: 11px;
-        //white-space: nowrap;
-        //padding-right: 8px;
-        //font-weight: 400;
-        //@include m-theme() {
-        //  color: themed($m-grey-400);
-        //}
 
         height: 19px;
         width: 92px;
@@ -123,10 +110,6 @@ m-onboarding__groupList {
         span {
           display: none;
         }
-      }
-
-      m-join {
-        margin-right: 10px;
       }
     }
   }
